# logic-action-site

./: .env.example  .gitignore  docker-compose.nginx-test.yml  docker-compose.prod.yml  docker-compose.yml  middleware.ts  package-lock.json  package.json
app/: globals.css
app/[locale]/: page.tsx
app/components/: button.tsx  footer.tsx  (+1 more)
backend/: .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3dd3b9c3aea0_init.py  8c63ff7f6148_add_community_posts_comments_events.py  a1b2c3d4e5f6_add_teacher_and_homework.py  a7293ca816f9_add_rsvp_invites_email_prefs.py  b22d6e1ac665_add_event_time_and_image_urls.py  b2c3d4e5f6a7_add_class_enrollments.py  c3d4e5f6a7b8_grade_type_and_title.py  d4e5f6a7b8c9_add_payments_and_invoices.py  e5f6a7b8c9d0_add_user_is_active.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: models.py
backend/app/routers/: admin.py  auth.py  community.py  deps.py  parent.py  teacher.py
backend/app/schemas/: schemas.py
backend/app/services/: base.py  class_service.py  community_service.py  email_service.py  event_service.py  exam_service.py  homework_service.py  payment_service.py  storage.py  student_service.py  teacher_service.py
certbot/: .gitignore
docs/: how_to_test_data.md  metabase-analyst-guide.md  tableau-analyst-guide.md
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
messages/: en.json  zh.json
nginx/: nginx-bootstrap.conf  nginx-local.conf  nginx.conf
(+124 files in other folders)
